--- a/estilos.css
+++ b/estilos.css
@@ -377,6 +377,18 @@ body{
 
 }
 
+.cambio{
+
+
+    text-align: center;
+    font-weight: 900;
+    color: #764ba2;
+    font-size: 20px;
+    padding: 20px;
+    
+
+}
+
 .contenedor-metodologia{
 
     display: flex;
